# Hallocy

./: CMakeLists.txt  LICENSE  README.md
Include/Hallocy/: Allocator.h  Simd.h
Src/: Allocator.c  Main.c  Simd.c
